
This file shows the changes in recent releases of MODx. The most current release is usually the 
development release, and is only shown to give an idea of what's currently in the pipeline.

MODx Revolution 2.0.0-rc-1 ($LastChangedRevision$, $LastChangedDate$)
====================================
- Fixed bug in transport schema
- [#MODX-1571] Fixed xtype in automatic_alias setting
- [#MODX-1572] Fixed deprecated error in PHPMailer service
- [#MODX-1512] Fixed bug with MODx.tree.Tree::refreshNode that caused a strange duplicate node error
- Updated xPDO to revision 392 to get new nested condition features
- [#MODX-1515] Fixed date picker CSS
- [#MODX-923] Added file path to config.inc.php configcheck message on welcome page
- [#MODX-1579] Added code to prevent invalid characters from being used in admin username/password in setup
- [#MODX-1575] Fixed bug with Resource Group getList processor
- Updated to xPDO 2.0 revision 389 
- Added validation to modContext.key field; must be a valid PHP identifier without underscore characters
- Modified modError::checkValidation() to call modError::addField() for each validation message
- [#MODX-1562] Cleaned up Site Schedule grid to properly load baseParams during refresh and adjust pagination
- Cleaned up processor code, plugin invoking, access permission checks in processors
- [#MODX-1562] Fixed bug in Site Schedule data
- Fixed OnDocUnpublished and OnDocPublished calls in processors to pass modResource reference
- [#MODX-1564] Fixed bug causing combo values to get overridden if they were set before the combo store loaded
- Move element and resource prerender plugin events to after js registering to allow for proper event execution order
- [#MODX-986] Added "Duplicate Context" to Resource tree, as well as "Remove Context"
- Fixed bug with default provider on package management UI
- [#MODX-1540] Fixed last login display in Welcome page
- [#MODX-1567] Enabled sorting in Reports -> System Info -> Recently Edited Documents