@@ -44,6 +44,12 @@
         <field key="attributes" dbtype="mediumtext" phptype="array" />
         <field key="package_name" dbtype="varchar" precision="255" phptype="string" null="false" index="index" />
         <field key="metadata" dbtype="text" phptype="array" />
+        <field key="version_major" dbtype="tinyint" precision="4" attributes="unsigned" phptype="integer" null="false" default="0" index="index" />
+        <field key="version_minor" dbtype="tinyint" precision="4" attributes="unsigned" phptype="integer" null="false" default="0" index="index" />
+        <field key="version_patch" dbtype="tinyint" precision="4" attributes="unsigned" phptype="integer" null="false" default="0" index="index" />        
+        <field key="release" dbtype="varchar" precision="100" phptype="string" null="false" default="" index="index" />
+        <field key="release_index" dbtype="tinyint" precision="4" attributes="unsigned" phptype="integer" null="false" default="0" index="index" />
+        
         <aggregate alias="Workspace" class="modWorkspace" local="workspace" foreign="id" cardinality="one" owner="foreign" />
         <aggregate alias="Provider" class="transport.modTransportProvider" local="provider" foreign="id" cardinality="one" owner="foreign" />
     </object>
