@@ -4,6 +4,7 @@ development release, and is only shown to give an idea of what's currently in th
 
 MODx Revolution 2.0.0-rc-1 ($LastChangedRevision$, $LastChangedDate$)
 ====================================
+- Added version_major, version_minor, version_patch, release, and release_index fields to modTransportPackage tables to assist sorting and organization
 - Fixed bug in transport schema
 - [#MODX-1571] Fixed xtype in automatic_alias setting
 - [#MODX-1572] Fixed deprecated error in PHPMailer service
